maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:32: error: not found: value random3
  	{var alea : Int = random3()
                          ^